[package]
name = "ciris-keyring"
description = "Cross-platform hardware keyring with signing support for CIRISVerify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["software", "keyring-storage"]
software = []
android = ["jni"]
ios = []
tpm = ["tss-esapi"]
tpm-windows = ["windows"]  # Experimental: Windows native TPM via Platform Crypto Provider
keyring-storage = ["dep:keyring"]

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
p256 = { workspace = true }
ed25519-dalek.workspace = true
rand_core.workspace = true

# Cross-platform data directories for key persistence
dirs = "5"

# Cross-platform keyring for key storage (macOS Keychain, Windows Credential Manager, Linux Secret Service)
keyring = { version = "3", optional = true }

# Platform-specific
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }
# Tokio for blocking on async hardware operations in sync context
tokio = { version = "1.41", features = ["rt"] }

[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.9"
security-framework-sys = "2.9"
core-foundation = "0.9"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
sha2 = "0.10"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
tss-esapi = { version = "7.4", optional = true }
sha2 = "0.10"
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
security-framework-sys = "2.9"
core-foundation = "0.9"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincred"] }
# Windows NCrypt API for TPM via Platform Crypto Provider (experimental)
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
