[package]
name = "ciris-keyring"
description = "Cross-platform hardware keyring with signing support for CIRISVerify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# v8.0.0 (CIRISVerify#141): `tpm-plugin` is now a DEFAULT feature — the keyring's
# only TPM backend is the runtime-loaded `dlopen` plugin; the link-time `tpm`
# (tss-esapi) backend was DELETED. So the default build carries zero tss-esapi /
# libtss2 on every target (incl. musl + the wheel) and reaches TPM purely at
# runtime where the plugin .so + a device exist.
default = ["software", "keyring-storage", "tpm-plugin"]
software = []
android = ["jni"]
ios = []
# Runtime-loaded TPM backend (CIRISVerify#130/#141): dlopen `libciris_tpm_plugin.so`
# (seal/unseal + signer + quote over a versioned C ABI) instead of link-binding
# tss-esapi. Pure-Rust dlopen (`libloading`); builds on EVERY target. TPM is
# opportunistic where the plugin .so + a device exist at runtime, else the
# software fallback. This is the keyring's sole TPM backend as of v8.0.0.
tpm-plugin = ["dep:libloading"]
# YubiKey / PKCS#11 hardware-token user-identity signer (CIRISVerify#80).
# Real cryptoki C_Sign behind a physical token; off by default (needs a token).
pkcs11 = ["dep:cryptoki"]
tpm-windows = ["windows"]  # Experimental: Windows native TPM via Platform Crypto Provider
keyring-storage = ["dep:keyring"]
# Post-quantum cryptography: enables ML-DSA-65 software signer + PqcSigner trait.
# Used by CIRISPersist's cold-path PQC fill-in flow (federation_keys etc.) so
# downstream consumers don't reach into the ml-dsa crate directly.
pqc-ml-dsa = ["dep:ciris-crypto"]

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
# Common (all targets): the USB-wrapped ML-DSA blob (usb_wrapped_mldsa65, gated on
# pqc-ml-dsa which builds on every platform) serializes its blob as JSON. Was
# previously Linux/Windows-only (TPM/pkcs11 StorageDescriptor) — promoted here.
serde_json.workspace = true
p256 = { workspace = true }
ed25519-dalek.workspace = true
rand_core.workspace = true
# pkcs11 (cryptoki) builds on ALL targets for feature parity (CIRISVerify#80
# follow-up — so the wheel/FFI can carry `default = ["pkcs11"]` uniformly across
# linux/macos/windows/android/ios; coordinated with the ciris-server cut). cryptoki
# is libloading-based (no PKCS#11 .so linked at build, cryptoki-sys ships
# pre-generated bindings → no libclang) so it cross-compiles; the backend is simply
# unavailable at runtime on a target with no token (`open_pkcs11` errors honestly).
# Was Linux/Windows-only — promoted here. NB this is NOT TPM (tss-esapi stays gated).
cryptoki = { version = "0.12", optional = true }

# Runtime dlopen of the TPM plugin (#130, `tpm-plugin` feature). Pure-Rust
# (no C link); builds on every target incl. musl, so the keyring carries no
# tss-esapi link dependency.
libloading = { version = "0.8", optional = true }

# Cross-platform data directories for key persistence.
# v6 (windows-sys 0.59 → windows-targets raw-dylib) — the old dirs 5 →
# windows-sys 0.48 → windows-targets 0.48.5 chain bundles versioned .lib
# files keyed to standard triples and fails to link on the Tier-3
# x86_64-win7-windows-msvc target (CIRISVerify#67 LNK1181). Only uses
# data_local_dir()/home_dir(), unchanged across the major bump.
dirs = "6"

# Cryptographic primitives for secure blob storage
rand = "0.8"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Hex encoding for fingerprints
hex = "0.4"
base64 = { workspace = true }

# Cross-platform keyring for key storage (macOS Keychain, Windows Credential Manager, Linux Secret Service)
keyring = { version = "3", optional = true }

# CIRIS cryptographic primitives — gated behind pqc-ml-dsa so the existing
# default ciris-keyring build doesn't pull in ml-dsa.
ciris-crypto = { path = "../ciris-crypto", version = "10", optional = true, default-features = false, features = ["pqc-ml-dsa", "ed25519", "self-enc", "hybrid-kex"] }

# Platform-specific
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }
# Tokio for blocking on async hardware operations in sync context
tokio = { version = "1.41", features = ["rt"] }

[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.9"
security-framework-sys = "2.9"
core-foundation = "0.9"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"

# NB (v8.0.0, CIRISVerify#141): the link-time `tss-esapi` TPM dependency was
# DELETED here. The keyring no longer link-binds tss2 on ANY target — TPM is
# reached purely at runtime by `dlopen`ing `ciris-tpm-plugin` (the `tpm-plugin`
# feature, default-on). This is what makes the keyring build + load everywhere
# (musl, the wheel, cross) with zero libtss2 DT_NEEDED.

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
security-framework-sys = "2.9"
core-foundation = "0.9"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincred"] }
# Windows NCrypt API for TPM via Platform Crypto Provider (experimental)
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
criterion.workspace = true
# serde_json now a common dependency (above) — used by usb_wrapped_mldsa65 on
# every platform — so it no longer needs a separate dev-dependency declaration.

[[bench]]
name = "storage_descriptor"
harness = false
