[package]
name = "ciris-verify-core"
description = "Core verification logic for CIRISVerify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["pqc"]
pqc = ["ciris-crypto/pqc-ml-dsa", "ciris-keyring/pqc-ml-dsa"]
android = ["ciris-keyring/android"]
ios = ["ciris-keyring/ios"]
# Runtime-loaded TPM backend (CIRISVerify#141): the keyring's sole TPM backend —
# it `dlopen`s `libciris_tpm_plugin.so` (seal/unseal + signer + quote) instead of
# link-binding tss-esapi. Pulls only `libloading` — NO tss-esapi, NO libtss2
# DT_NEEDED — safe on the wheel cdylib + musl. Default-on in the keyring as of
# v8.0.0 (the link-time `tpm` feature was deleted), so this is inherited by
# default; named here for explicit control.
tpm-plugin = ["ciris-keyring/tpm-plugin"]
tpm-windows = ["ciris-keyring/tpm-windows"]  # Experimental: Windows native TPM
# PKCS#11 hardware-token support (YubiKey PIV / OpenSC) for the `token` CLI
# subcommand. Pulls in `cryptoki` via the keyring; needs a physical token to
# exercise (CIRISVerify#80). Bakes the dep into the binary build.
pkcs11 = ["ciris-keyring/pkcs11"]

[[bin]]
name = "ciris-verify"
path = "src/bin/ciris_verify.rs"

[dependencies]
# Internal crates
ciris-keyring.workspace = true
# `kdf` + `aes-gcm` enable password-protected software keys (PBKDF2 → AES-256-GCM).
ciris-crypto = { workspace = true, features = ["kdf", "aes-gcm"] }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# CLI
clap = { version = "4.5", features = ["derive"] }
# Hidden PIN / password prompt (keeps secrets out of argv / shell history) —
# used by the `token` PKCS#11 PIN and the `fedcode`/identity software-key password.
rpassword = "7"
# QR rendering for fedcodes (terminal unicode + SVG only). `default-features =
# false` drops the `image` render feature, whose `image@0.25` transitively needs
# rustc 1.88 > our MSRV 1.86 — we only use the svg/unicode renderers.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# v4.11.0 (CIRISVerify#59): RFC 8785 JSON Canonicalization Scheme — the
# cross-impl signing-bytes encoding CEG §0.9 mandates for federation
# Contributions. Wrapped behind `ciris_verify_core::jcs`; the notorious
# ECMAScript number-to-string algorithm (RFC 8785 §3.2.2.3) lives in this
# crate's `ryu-js` backend rather than being hand-rolled. Behavior is
# locked by RFC 8785 Appendix B KAT vectors in `jcs::tests`.
serde_jcs = "0.2"

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# DNS resolution
hickory-resolver.workspace = true

# TLS (for the DNS-over-HTTPS bundled-certs fallback in dns.rs). hickory 0.25
# uses rustls 0.23 internally; we match it so the DoH ClientConfig type lines up
# and the old rustls-0.21 / webpki-roots-0.25 duplicates collapse (CIRISVerify#165).
# ring backend to match the repo's force-ring policy.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"

# HTTP client
reqwest.workspace = true

# Crypto utilities
sha2.workspace = true
hkdf = "0.12"
base64.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true

# Authenticated encryption
chacha20poly1305 = "0.10"

# Random
rand.workspace = true

# Constant-time comparison
subtle = "2.6"

# Platform-specific
libc = "0.2"

# Binary parsing (Mach-O __TEXT segment hashing for iOS code-sign stability)
goblin.workspace = true

# v4.3.0 (CIRISPersist#132): rusqlite at the unconditional level so
# every target gets rusqlite. The Android-only target table further
# down adds the `bundled` feature for Android; every other target
# (Linux / macOS / Windows / iOS) inherits this base entry and links
# dynamically against the platform's libsqlite3.
rusqlite.workspace = true
x509-parser = { version = "0.16", features = ["verify"] }

# SQLite for audit trail verification.
#
# v4.3.0 (CIRISPersist#132 / CIRISPersist#133): `bundled` is Android-
# only. Pre-4.3.0 the workspace default + a wide
# `cfg(not(target_os = "ios"))` override BOTH activated `bundled`,
# producing a statically-linked libsqlite3 in every desktop wheel.
# When ciris-persist.so + ciris-edge.so were both loaded into the
# same Python process (cohabitation, see persist's
# docs/COHABITATION.md), each cdylib carried its own libsqlite3
# instance + its own `sqlite3GlobalConfig` static. Edge's libsqlite3
# was never `sqlite3_initialize`d → first mallocWithAlarm indirected
# through a NULL xMalloc slot → SIGSEGV in production (CIRISEdge#50).
#
# v4.3.0 narrows `bundled` to Android only — the NDK libsqlite3 isn't
# guaranteed across vendor builds, and Android's app-sandbox model
# makes static linking the conventional posture. Linux / macOS /
# Windows / iOS all link dynamically against the platform's
# libsqlite3, sharing one instance across cdylibs via dlopen.
#
# iOS still must use system SQLite — bundled SQLite exports duplicate
# sqlite3_* symbols that conflict with Apple's system SQLite (Apple's
# SQLiteDatabaseTracking hooks at SQLiteDatabaseTracking.cpp
# assert-fail on connections from the foreign copy, the same trap
# CIRISVerify v1.6.4 originally documented). iOS picks up the
# workspace-level rusqlite (no bundled) by virtue of NOT matching
# the Android target table below.
# Blocking HTTP client for Android/iOS (tokio async I/O broken on JNI/iOS threads)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
# ureq with rustls for blocking HTTPS (bypasses broken tokio async I/O).
# rustls (0.23, ring) + webpki-roots (0.26) now come from the common [dependencies]
# above — unified with the DoH path after the hickory 0.25 bump (CIRISVerify#165),
# so no mobile-specific rustls/webpki-roots alias is needed anymore.
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }

[target.'cfg(target_os = "android")'.dependencies]
# v4.3.0 (CIRISPersist#132): rusqlite `bundled` for Android. NDK
# libsqlite3 isn't guaranteed across vendor builds; Android's app-
# sandbox convention is static linking. See the rationale comment
# before the rusqlite workspace entry for the full story.
rusqlite = { version = "0.31", features = ["bundled"] }
# Android system properties API (for emulator detection)
android_system_properties = "0.1"

# v4.4.3 (CIRISVerify#45 / CIRISPersist#141): macOS dropped from the
# bundled target table. The v4.4.1 hypothesis that the CIRISEdge#50
# cross-cdylib SIGSEGV was Linux-ELF-only was wrong. Mach-O has the
# same per-cdylib isolation: each `.so` statically links its own
# libsqlite3 → its own `sqlite3GlobalConfig` static → SIGSEGV when
# the second copy is invoked without ever being `sqlite3_initialize`d.
# CIRISPersist#141 surfaced this on darwin × sqlite
# (test_durable_send_enqueues_to_outbound_queue, rc=-11). macOS now
# inherits the workspace-level dynamic entry and links against
# `/usr/lib/libsqlite3.dylib` (ships with every macOS release) — ONE
# library instance shared across cohab cdylibs via the dynamic loader,
# same fix shape CIRISPersist#132/#133 applied for Linux. The iOS
# `libRPAC.dylib` / SQLiteDatabaseTracking trap (CIRISVerify v1.6.4)
# is iOS-specific; macOS desktop has no such framework, so dynamic
# linkage there is safe.
#
# Windows stays bundled: PE/COFF has its own linkage constraints, no
# cohab evidence for cross-cdylib SIGSEGV there yet, and there's no
# system libsqlite3 on Windows by default (vcpkg/chocolatey paths
# are fragile in CI).
[target.'cfg(target_os = "windows")'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = "3"
criterion.workspace = true
rcgen = "0.13"

[[bench]]
name = "build_manifest"
harness = false

[[bench]]
name = "transparency_merkle"
harness = false

[[bench]]
name = "key_derivation"
harness = false
