[package]
name = "ciris-verify-ffi"
description = "C FFI interface for CIRISVerify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []
android = ["ciris-verify-core/android"]
ios = ["ciris-verify-core/ios"]
tpm = ["ciris-verify-core/tpm"]
tpm-windows = ["ciris-verify-core/tpm-windows"]  # Experimental: Windows native TPM

[dependencies]
ciris-verify-core.workspace = true
ciris-keyring.workspace = true
ciris-crypto.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
prost.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
libc = "0.2"
hex.workspace = true
getrandom = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
sha2.workspace = true

# Constructor for early initialization (macOS/iOS)
ctor = "0.2"

# For mobile targets
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"
log = "0.4"
# Blocking HTTP client - tokio async I/O doesn't work on Android JNI threads
ureq = { workspace = true }
# Bundled Mozilla CA certs (native-certs doesn't work on Android)
webpki-roots = { workspace = true }
rustls = "0.23"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"
log = "0.4"

[build-dependencies]
cbindgen = "0.26"
