[package]
name = "ciris-verify-ffi"
description = "C FFI interface for CIRISVerify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["secp256k1", "key-grant", "hybrid-kex"]
# v4.7.0+ (CIRISVerify#50): wheel surface for v4.6.0 hybrid X25519 + ML-KEM-768
# KEX — Python wheel consumers reach `ciris_crypto::hybrid_kex` through
# `wheel_hybrid_kex.rs`'s 4 FFI fns. Always-on by default so the wheel
# surface is unconditionally available.
hybrid-kex = ["ciris-crypto/hybrid-kex"]
android = ["ciris-verify-core/android"]
ios = ["ciris-verify-core/ios"]
# Runtime-loaded TPM backend (CIRISVerify#141) — the keyring's sole TPM backend,
# dlopen'd, no libtss2 DT_NEEDED. Default-on via the keyring as of v8.0.0; named
# here for explicit control.
tpm-plugin = ["ciris-verify-core/tpm-plugin"]
tpm-windows = ["ciris-verify-core/tpm-windows"]  # Experimental: Windows native TPM
secp256k1 = ["ciris-crypto/secp256k1"]  # EVM wallet signing support
# v4.7.0+ (CIRISVerify#50): wheel surface for the v4.4.0 key_grant
# HPKE-shape wrap/unwrap primitive — Python wheel consumers reach
# `ciris_crypto::key_grant::{wrap_dek_for_recipient, unwrap_dek}`
# through `wheel_key_grant.rs`'s 2 FFI fns. Always-on by default so
# the wheel surface is unconditionally available; can be turned off
# for size-constrained mobile builds that don't ship the media tier.
key-grant = ["ciris-crypto/key-grant"]

[dependencies]
ciris-verify-core.workspace = true
ciris-keyring.workspace = true
# scope-privacy (#82): the §2.2/§2.4/§3.4 derivation helpers are exposed on the
# wheel (`wheel_scope_privacy`), so the wheel build always needs the feature.
# Pure Rust (kdf + hmac), no platform/heavy deps — safe to enable unconditionally.
# self-enc (#151): deterministic self content-encryption keypair derivation
# (X25519 + ML-KEM-768) exposed on the wheel via `wheel_self_enc` — also always-on.
ciris-crypto = { workspace = true, features = ["scope-privacy", "self-enc"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
base64.workspace = true
libc = "0.2"
hex.workspace = true
ed25519-dalek = { workspace = true }
# v6 drops the windows-sys 0.48 → windows-targets 0.48.5 chain that fails to
# link on the Tier-3 x86_64-win7-windows-msvc target (CIRISVerify#67).
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
sha2.workspace = true
rand.workspace = true

# Encryption API (v1.6.0)
aes-gcm = "0.10"
hkdf = "0.12"

# Constructor for early initialization (macOS/iOS)
ctor = "0.2"

# For mobile targets
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"
log = "0.4"
tracing-log = "0.2"
# Blocking HTTP client with rustls (ring backend works on Android)
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }
# Bundled Mozilla CA certs (native-certs doesn't work on Android)
webpki-roots = { workspace = true }
# Force ring backend for rustls (aws-lc-rs has Android issues)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"
log = "0.4"
# Blocking HTTP client with rustls (same pattern as Android — bypasses tokio/hickory-resolver)
# getaddrinfo() hangs for 30s on iOS; ureq + DoH avoids this entirely
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }
# Bundled Mozilla CA certs (rustls-native-certs may not find iOS system certs)
webpki-roots = { workspace = true }
# Force ring backend for rustls (consistent with Android)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[dev-dependencies]
# Mock YubiKey PIV attestation chains for the accord custody FFI tests (#91).
rcgen = "0.13"

[build-dependencies]
cbindgen = "0.26"
